--- a/looplab/css/style.css
+++ b/looplab/css/style.css
@@ -39,3 +39,11 @@ body {
     padding      : 5px;
     border-radius: 5px;
 }
+
+#explore-section .fas,
+#share-section .fas {
+    background   : #333;
+    color        : #fff;
+    padding      : 5px;
+    border-radius: 5px;
+}
