--- a/looplab/css/style.css
+++ b/looplab/css/style.css
@@ -33,7 +33,8 @@ body {
     opacity: 0.7;
 }
 
-#home-section .fas {
+#home-section .fas,
+#create-section .fas {
     color        : #008ed6;
     background   : #fff;
     padding      : 5px;
