--- a/mizuxe/scss/style.scss
+++ b/mizuxe/scss/style.scss
@@ -15,3 +15,18 @@ body {
         padding-right: 1.4rem;
     }
 }
+
+#showcase {
+    position  : relative;
+    backgound : url('../img/mountains.jpg');
+    min-height: 600px;
+
+    .primary-overlay {
+        background: $primary-overlay;
+        position  : absolute;
+        top       : 0;
+        left      : 0;
+        width     : 100%;
+        height    : 100%;
+    }
+}
