--- a/mizuxe/scss/style.scss
+++ b/mizuxe/scss/style.scss
@@ -30,3 +30,18 @@ body {
         height    : 100%;
     }
 }
+
+
+@media(max-width:768px) {
+    #showcase {
+        min-height: 500px;
+
+        h1 {
+            font-size: 4rem;
+        }
+    }
+
+    .mb-resp {
+        margin-bottom: 1rem;
+    }
+}
