--- a/mizuxe/scss/style.scss
+++ b/mizuxe/scss/style.scss
@@ -31,6 +31,12 @@ body {
     }
 }
 
+.info-header {
+    width        : 50%;
+    margin       : auto;
+    border-bottom: 1px #ddd solid;
+}
+
 
 @media(max-width:768px) {
     #showcase {
