--- a/mizuxe/scss/style.scss
+++ b/mizuxe/scss/style.scss
@@ -37,6 +37,21 @@ body {
     border-bottom: 1px #ddd solid;
 }
 
+#authors {
+    img {
+        margin-top: -50px;
+    }
+
+    .card:hover {
+        background: $primary;
+        color     : #fff;
+    }
+
+    .fab {
+        color: #fff;
+    }
+}
+
 
 @media(max-width:768px) {
     #showcase {
